# tradeContract

./: .gitignore  Makefile  ape-config.yaml  pyproject.toml  readme.md
contracts/: Sales.sol  sales.sol
contracts/tests/: MyTestToken.sol  SalesTest.sol
tests/: conftest.py  test_contract.py
